<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/margin_4"
        app:cardCornerRadius="@dimen/margin_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
<RelativeLayout
    android:id="@+id/background_img"
    android:background="@drawable/b4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/text"
            android:id="@+id/main_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/ic_home_black_24dp" />
        <RelativeLayout
            android:layout_marginLeft="@dimen/text_1"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:id="@+id/txt_mex"
                android:text="@string/mexican"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:id="@+id/LL_rate"
                android:orientation="horizontal"
                android:layout_below="@+id/txt_mex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_rate_value"
                    android:text="@string/rateno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <!--<RatingBar-->
                    <!--android:id="@+id/rating_btn"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:numStars="5"-->
                    <!--android:rating="1.5" />-->
                <TextView
                    android:id="@+id/txt_rate_per"
                    android:textColor="@color/white"
                    android:text="@string/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </RelativeLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/images" />
        </LinearLayout>
        <TextView
            android:id="@+id/descript"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/text"
            android:layout_marginRight="@dimen/height"
            android:textSize="15dp"
            android:layout_below="@+id/main_context"
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/height"/>
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_below="@+id/descript"
        android:background="@drawable/round"
        android:layout_width="200dp"
        android:layout_height="50dp">
        <TextView
            android:layout_marginTop="@dimen/margin_3"
            android:textSize="@dimen/text_1"
            android:textColor="@color/white"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_width="35dp"
            android:layout_height="35dp" />
    </LinearLayout>
</RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>