<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    ​
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_5"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_5"
            android:background="@drawable/f4"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


            ​
        </android.support.design.widget.CollapsingToolbarLayout>
        ​
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_3"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="@dimen/margin_3"
                android:elevation="@dimen/margin_3"
                app:cardCornerRadius="@dimen/margin_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <org.mmtextview.components.MMTextView
                        android:id="@+id/detial_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_3"
                        android:text="@string/detailtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3"
                        android:layout_marginTop="@dimen/margin_3"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:clickable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/images"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/detail_text"
                        android:padding="@dimen/text_1"
                        app:layout_constraintTop_toBottomOf="@+id/send"
                        android:text="@string/detail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints" />

                    <LinearLayout
                        android:id="@+id/floating"
                        app:layout_constraintTop_toBottomOf="@+id/detail_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints">
                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fl_clock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            android:clickable="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintVertical_bias="0.0"
                            app:srcCompat="@drawable/ic_access_time_black_24dp"
                            tools:ignore="MissingConstraints" />
                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fl_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            android:clickable="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintVertical_bias="0.0"
                            app:srcCompat="@drawable/ic_access_time_black_24dp"
                            tools:ignore="MissingConstraints" />
                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fl_map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            android:clickable="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintVertical_bias="0.0"
                            app:srcCompat="@drawable/ic_access_time_black_24dp"
                            tools:ignore="MissingConstraints" />
                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/fl_deliver"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            android:clickable="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintVertical_bias="0.0"
                            app:srcCompat="@drawable/ic_access_time_black_24dp"
                            tools:ignore="MissingConstraints" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/float_txt"
                        app:layout_constraintTop_toBottomOf="@+id/floating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/time"
                            android:id="@+id/txt_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintVertical_bias="0.0"
                            tools:ignore="MissingConstraints" />
                        <TextView
                            android:text="@string/lenght"
                            android:id="@+id/txt_lenght"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="MissingConstraints" />
                        <TextView
                            android:text="@string/map"
                            android:id="@+id/txt_map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintVertical_bias="0.0"
                            tools:ignore="MissingConstraints" />
                        <TextView
                            android:text="@string/delivery"
                            android:id="@+id/txt_delivery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_3"
                            android:layout_marginTop="@dimen/margin_3"
                            android:layout_marginEnd="@dimen/margin_5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintVertical_bias="0.0"
                            tools:ignore="MissingConstraints" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/line_img"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_1"
                        android:layout_marginTop="@dimen/margin_5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/float_txt"
                        app:srcCompat="@drawable/line_shape" />

            <LinearLayout
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@+id/line_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">
                <TextView
                    android:layout_weight="1"
                    android:textSize="@dimen/text_1"
                    android:textColor="@color/white"
                    android:text="@string/detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:textSize="@dimen/text_1"
                    android:textColor="@color/white"
                    android:text="@string/menu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:textSize="@dimen/text_1"
                    android:textColor="@color/white"
                    android:text="@string/review"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>



                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>



        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>